# amblaq

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/amblaq/: queues.h
include/atomic-queues/: mpmc.h  queue-cpp17.h
include/queues/: queues.h
src/: mpmc.c
tests/: example.c  test_mpmc.cpp  test_queues.c  test_queues.cpp
